# grocery-list

./: .pre-commit-config.yaml  LICENSE  conftest.py  pyproject.toml
.github/workflows/: lint.yml
app/: __init__.py  groceries.py  main.py
app/db/: base_class.py  crud.py  session.py
app/models/: grocery_item.py  grocery_list.py
app/routers/: items.py  lists.py  test_items.py  test_lists.py
app/schemas/: grocery_list.py  item.py
src/: main.py
