[tool.poetry]
name = "grocery-list"
version = "0.1.0"
description = ""
authors = ["Natalie Menato <15682036+nmeusling@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
python-lsp-server = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
